# Generative-AI

fast_Api_project/: README.md  pyproject.toml
fast_Api_project/fast_api_project/: main.py
fast_Api_project/tests/: test_main.py
generativeAI/: README.md  pyproject.toml
generativeAI/generativeai/: main.py
